<resources>
    <string name="about_android">%1$s for Android</string>
    <string name="about_version">Version %1$s</string>
    <string name="actionbar_search">Search this folder</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_upload_from_apps">Content from other apps</string>
    <string name="actionbar_upload_files">Files</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort">Sort</string>
    <string name="actionbar_descending">Descending</string>
    <string name="actionbar_sort_title">Sort by</string>
    <string name="actionbar_sort_by_name">A-Z</string>
    <string name="actionbar_sort_by_date">Oldest - Newest</string>
    <string name="actionbar_sort_by_size">Smallest - Largest</string>
    <string name="drawer_item_all_files">All files</string>
    <string name="drawer_item_only_available_offline">Available offline</string>
    <string name="drawer_item_shared_by_link_files">Shared by link</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_uploads_list">Uploads</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_loading_quota">Loading quota</string>
    <string name="drawer_quota">%1$s of %2$s used (%3$s %%)</string>
    <string name="drawer_unavailable_free_storage">%1$s in use</string>
    <string name="drawer_unavailable_used_storage">No storage usage information available</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_help">Help</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_more">More</string>
    <string name="prefs_category_security">Security</string>
    <string name="prefs_accounts">Accounts</string>
    <string name="prefs_manage_accounts">Manage accounts</string>
    <string name="prefs_passcode">Passcode lock</string>
    <string name="prefs_fingerprint">Fingerprint lock</string>
    <string name="prefs_fingerprint_summary">Enable passcode or pattern lock to enable this option</string>
    <string name="prefs_touches_with_other_visible_windows">Touches with other visible windows</string>
    <string name="prefs_touches_with_other_visible_windows_summary">Allow touches when the view is obscured by another visible window. Enable it to use light filtering apps.</string>
    <string name="confirmation_touches_with_other_windows_title">Are you sure you want to enable this feature?</string>
    <string name="confirmation_touches_with_other_windows_message">Use this feature under your own responsibility, a malicious application could try to spoof you into performing some actions, unaware, using other views.</string>
    <string name="prefs_camera_picture_upload">Picture uploads</string>
    <string name="prefs_camera_picture_upload_summary">Automatically upload pictures taken by camera</string>
    <string name="prefs_camera_video_upload">Video uploads</string>
    <string name="prefs_camera_video_upload_summary">Automatically upload videos recorded by camera</string>
    <string name="prefs_log_title">Enable logging</string>
    <string name="prefs_log_summary">This is used to log problems</string>
    <string name="prefs_log_title_history">Logging history</string>
    <string name="prefs_log_summary_history">This shows the recorded logs</string>
    <string name="prefs_log_delete_history_button">Delete history</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_sync_calendar_contacts">Sync your contacts, calendars and tasks</string>
    <string name="prefs_sync_calendar_contacts_summary">Install DAVx⁵</string>
    <string name="prefs_recommend">Recommend to a friend</string>
    <string name="prefs_feedback">Feedback</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_remember_last_share_location">Remember share location</string>
    <string name="prefs_remember_last_upload_location_summary">Remember last share upload location</string>
    <string name="prefs_pattern"> Pattern lock </string>
    <string name="pattern_enter_pattern">Please enter your pattern</string>
    <string name="pattern_configure_pattern">Enter your pattern</string>
    <string name="pattern_remove_pattern">Remove your pattern</string>
    <string name="pattern_incorrect_pattern">Incorrect pattern</string>
    <string name="pattern_reenter_pattern">Please re-enter your pattern</string>
    <string name="pattern_not_same_pattern">The patterns are not same</string>
    <string name="pattern_stored">Pattern Stored</string>
    <string name="pattern_removed">Pattern Removed</string>
    <string name="pattern_already_set">Pattern and passcode locks cannot be enabled at the same time, please disable pattern first</string>
    <string name="passcode_already_set">Pattern and passcode locks cannot be enabled at the same time, please disable passcode first</string>
    <string name="pattern_no_longer_required">The pattern will not be asked anymore</string>
    <string name="pattern_configure_your_pattern_explanation">The pattern will be requested every time the app is started</string>
    <string name="pass_code_locked">Locked with passcode</string>
    <string name="pattern_locked">Locked with pattern</string>
    <string name="illegal_argument_exception_message">A valid ACTION is needed in the Intent passed to</string>
    <string name="recommend_subject">Try %1$s on your smartphone!</string>
    <string name="recommend_text">"I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s"</string>
    <string name="error_reason">because</string>
    <string name="auth_failure_snackbar">Authentication failed</string>
    <string name="auth_failure_snackbar_action">Change account</string>
    <string name="auth_oauth_failure">The access token has expired or become invalid. Sign in again to regain access</string>
    <string name="auth_oauth_failure_snackbar_action">Sign in</string>
    <string name="auth_check_server">Check server</string>
    <string name="auth_host_url">Server address https://&#8230;</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">Create Account</string>
    <string name="auth_login">Back to Login</string>
    <string name="sync_string_files">Files</string>
    <string name="setup_btn_login">Log in</string>
    <string name="uploader_btn_upload_text">Upload</string>
    <string name="uploader_top_message">Choose upload folder</string>
    <string name="uploader_wrn_no_account_title">No account found</string>
    <string name="uploader_wrn_no_account_text">There are no %1$s accounts on your device. Please set up an account first.</string>
    <string name="uploader_wrn_no_account_setup_btn_text">Setup</string>
    <string name="uploader_wrn_no_account_quit_btn_text">Quit</string>
    <string name="uploader_error_title_no_file_to_upload">No file to upload</string>
    <string name="uploader_error_message_received_piece_of_text">%1$s cannot upload a piece of text as a file.</string>
    <string name="uploader_error_message_no_file_to_upload">Received data do not include any valid file.</string>
    <string name="uploader_error_title_file_cannot_be_uploaded">File cannot be uploaded</string>
    <string name="uploader_error_message_read_permission_not_granted">%1$s is not allowed to read a received file</string>
    <string name="uploader_error_message_source_file_not_found">File to upload was not found in its location. Please check whether the file exists.</string>
    <string name="uploader_error_message_source_file_not_copied">An error occurred while copying the file to a temporary folder. Please try to send again.</string>
    <string name="file_list_seconds_ago">seconds ago</string>
    <string name="file_list_empty">Nothing in here. Upload something!</string>
    <string name="file_list_empty_available_offline">There are no available offline files.</string>
    <string name="file_list_empty_shared_by_links">No files have been shared by link.</string>
    <string name="file_list_loading">Loading&#8230;</string>
    <string name="file_list_no_app_for_file_type">No app found for file type</string>
    <string name="local_file_list_empty">There are no files in this folder.</string>
    <string name="local_file_list_empty_just_folders">There are no folders in this folder.</string>
    <string name="local_file_list_search_with_no_matches">No matches for this search</string>
    <string name="upload_list_empty">No uploads available.</string>
    <string name="file_list_folder">folder</string>
    <string name="file_list_folders">folders</string>
    <string name="file_list_file">file</string>
    <string name="file_list_files">files</string>
    <string name="filedetails_select_file">Tap on a file to display additional information.</string>
    <string name="upload_to">Upload to %1$s</string>
    <string name="upload_files_title"> Files </string>
    <string name="filedetails_size">Size:</string>
    <string name="filedetails_type">Type:</string>
    <string name="filedetails_created">Created:</string>
    <string name="filedetails_modified">Modified:</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Synchronize</string>
    <string name="filedetails_renamed_in_upload_msg">File was renamed to %1$s during upload</string>
    <string name="list_layout">List layout</string>
    <string name="action_share">Share</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_remove_upload">Remove upload</string>
    <string name="common_retry_upload">Retry upload</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_back">Back</string>
    <string name="common_save_exit">Save &amp; exit</string>
    <string name="common_error">Error</string>
    <string name="common_loading">Loading&#8230;</string>
    <string name="common_unknown">unknown</string>
    <string name="common_error_unknown">unknown error</string>
    <string name="common_pending">Pending</string>
    <string name="common_important">Important</string>
    <string name="about_title">About</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Remove account</string>
    <string name="create_account">Create account</string>
    <string name="upload_chooser_title">Upload from</string>
    <string name="uploader_info_dirname">Folder name</string>
    <string name="uploader_upload_in_progress_ticker">Uploading&#8230;</string>
    <string name="uploader_upload_in_progress_content">%1$d%% Uploading %2$s</string>
    <string name="uploader_upload_succeeded_ticker">Upload succeeded</string>
    <string name="uploader_upload_succeeded_content_single">%1$s uploaded</string>
    <string name="uploader_upload_failed_ticker">Upload failed</string>
    <string name="auth_unauthorized">Wrong username or password</string>
    <string name="setup_btn_regsiter">Register</string>
    <string name="auth_email">Email</string>
    <string name="auth_name">Name</string>
    <string name="auth_confirm_password">Confirm Password</string>
    <string name="auth_registered_done">Your account has been created successfully</string>
    <string name="plans">Plans</string>
    <string name="total_storage">Total Storage</string>
    <string name="_1000gb">1000GB</string>
    <string name="_10_used">10% Used</string>
    <string name="_100gb">100GB</string>
</resources>