<?xml version="1.0" encoding="utf-8"?><!--
  ownCloud Android client application

  Copyright (C) 2012  Bartek Przybylski
  Copyright (C) 2016 ownCloud GmbH.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2,
  as published by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.owncloud.android.ui.activity.RegisterActivity">

    <ImageView
        android:id="@+id/login_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background_image" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <LinearLayout
                android:id="@+id/success_container"
                android:layout_width="match_parent"
                android:layout_height="200dp" android:visibility="gone"
                android:orientation="vertical" android:gravity="center_vertical">


                <TextView
                    android:id="@+id/auth_status_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/auth_unauthorized"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/auth_unauthorized"
                    android:textColor="@color/login_credentials_text_color"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/goToLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/setup_btn_login"
                    android:onClick="onLoginClick"
                    android:text="@string/auth_registered_done"
                    android:theme="@style/Button.Authenticator" />
            </LinearLayout>

            <LinearLayout android:id="@+id/form_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/account_name"
                    style="@style/EditText.Authenticator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/auth_name"
                    android:inputType="textPersonName"
                    android:theme="@style/EditText.Authenticator" />

                <EditText
                    android:id="@+id/account_email"
                    style="@style/EditText.Authenticator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/auth_email"
                    android:inputType="textEmailAddress"
                    android:theme="@style/EditText.Authenticator" />

                <EditText
                    android:id="@+id/account_password"
                    style="@style/EditText.Authenticator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/auth_password"
                    android:inputType="textPassword"
                    android:theme="@style/EditText.Authenticator" />

                <EditText
                    android:id="@+id/account_confirm_password"
                    style="@style/EditText.Authenticator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/auth_confirm_password"
                    android:inputType="textPassword"
                    android:theme="@style/EditText.Authenticator" />

                <TextView
                    android:id="@+id/auth_status_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/auth_unauthorized"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/auth_unauthorized"
                    android:textColor="@color/login_credentials_text_color"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/setup_btn_login"
                    android:onClick="onRegisterClick"
                    android:text="@string/setup_btn_regsiter"
                    android:theme="@style/Button.Authenticator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/login_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/auth_register"
                        android:gravity="center"
                        android:onClick="onLoginClick"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/auth_login"
                        android:textColor="@color/login_text_color" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>